syntax = "proto3";
package postservice;

import "google/protobuf/timestamp.proto";

message Post {
    string id = 1;
    string title = 2;
    string body = 3;
    string author = 4;
    repeated string keywords = 5;
    google.protobuf.Timestamp created_at = 6;
}

service PostService {
    rpc CreatePost(CreatePostRequest) returns (Post);
    rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
}

message CreatePostRequest {
    string title = 1;
    string body = 2;
    string author = 3;
    repeated string keywords = 4;
}

enum Comparison {
    COMP_UNSPECIFIED = 0;
    COMP_GT = 1;
    COMP_LT = 2;
}

message TimestampFilter {
    Comparison comp = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message GetPostsRequest {
    string id = 1;
    string title = 2;
    string author = 3;
    TimestampFilter timestamp_filter = 4;
    repeated string keywords = 5;
}

message GetPostsResponse {
    repeated Post posts = 1;
}